Added an option to download the all-languages version of phpMyAdmin.
Added a script installer for CMS Made Simple, version 1.5.3.
Added an installer for Vtiger CRM, version 5.0.4.
The bandwidth limit and using variables in all email templates (BW_LIMIT and BW_USAGE) are now formatted in MB or GB, instead of just being a number of bytes.
Added a Module Config option for an alternate command to use when moving a virtual server's home directory, instead of mv.
Mail files are now always included in backups and restores, even when under /var/mail.
If a plan specifies features to be granted to domain owners, those features will be enabled on the Create Virtual Server page when the plan is selected. Otherwise, defaults set on the Features and Plugins page will be used.
Added --email-only flags to the list-users.pl and list-domains.pl API scripts.
Added a button to the Edit Account Plan page to create a new plan cloned from an existing one.
Added a Module Config option for additional gzip command-line parameters, like --best or --rsyncable.
Re-factored code for deleting tables created by installed scripts, and better handle the case where a script's database is missing.
Converted libraries to use Webmin's new WebminCore module, where available. This leads to a signficant improvement in memory use and speed.
Added support for migrating Plesk 9 backups, which have a different format to Plesk 7 and 8.
Allowed script installers can now be set at the plan level and on the Edit Owner Limits page. They can also be set on the command line with create-plan, modify-plan and modify-limits commands.
Added the --plan flag to the create-reseller API command, to copy limits from a plan.
Link script names to their home pages.