@@ -171,3 +171,4 @@ spam_lock=0
 spam_trap_black=0
 ham_trap_white=0
 collect_restart=0
+secmx_nodns=0
