@@ -1,0 +1,10 @@
+<header>Add DNS MX records for secondary mail servers?</header>
+
+When this is set to <b>Yes</b> and additional mail servers are selected on the
+<b>Secondary Mail Servers</b> page, Virtualmin will add an <tt>MX</tt> record
+to the DNS domain for all virtual servers using those secondaries. However, if
+you have alternate MX records already defined in your DNS template, you can
+change this to <b>No</b>. <p>
+
+<footer>
+
