@@ -1077,3 +1077,4 @@ Added support for migrating Plesk 9 backups, which have a different format to Pl
 Allowed script installers can now be set at the plan level and on the Edit Owner Limits page. They can also be set on the command line with create-plan, modify-plan and modify-limits commands.
 Added the --plan flag to the create-reseller API command, to copy limits from a plan.
 Link script names to their home pages.
+Added option to not add MX records for secondary mail servers.
